Linear Regression attempt for all features

--- a/phase3.ipynb
+++ b/phase3.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "ff21f54e-9cfd-4d38-8ac5-b6be5dd762ff",
    "metadata": {},
    "outputs": [],
@@ -198,9 +198,83 @@
     "df = df[df['views'] > 0]\n",
     "\n",
     "# Remove extreme outliers\n",
-    "df = df[df['duration'] <= 1000]  # Remove very long videos\n",
+    "df = df[df['duration'] <= 1000]  # Remove long videos\n",
     "df = df[df['engagement_rate'] <= 1]  # Remove unrealistic rates"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fa1b969-d958-4fc1-aec4-aeccab686512",
+   "metadata": {},
+   "source": [
+    "### Linear Regression Attempt For All Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "fc8ed9d6-1575-4d39-a46d-5510c83b3309",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.000053\n",
+      "R²: 0.671543\n"
+     ]
+    }
+   ],
+   "source": [
+    "def evaluate_model(X, y):\n",
+    "    \"\"\"\n",
+    "    Implement linear regression using NumPy\n",
+    "    Uses Normal Equation: theta = (X^T X)^(-1) X^T y\n",
+    "    \"\"\"\n",
+    "    # Add bias column\n",
+    "    X_b = np.c_[np.ones((X.shape[0], 1)), X]\n",
+    "    \n",
+    "    # Normal equation\n",
+    "    theta = np.linalg.inv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)\n",
+    "    \n",
+    "    return theta\n",
+    "\n",
+    "def predict(X, theta):\n",
+    "    # Make predictions\n",
+    "    X_b = np.c_[np.ones((X.shape[0], 1)), X]\n",
+    "    return X_b.dot(theta)\n",
+    "\n",
+    "def calculate_metrics(y_true, y_pred):\n",
+    "    #Calculate MSE and R^2\n",
+    "    mse = np.mean((y_true - y_pred) ** 2)\n",
+    "    ss_tot = np.sum((y_true - np.mean(y_true)) ** 2)\n",
+    "    ss_res = np.sum((y_true - y_pred) ** 2)\n",
+    "    r2 = 1 - (ss_res / ss_tot)\n",
+    "    return mse, r2\n",
+    "\n",
+    "# Define features and target\n",
+    "features = ['duration', 'views', 'likes', 'comments']\n",
+    "X = df[features].values\n",
+    "y = df['engagement_rate'].values\n",
+    "\n",
+    "# Train model\n",
+    "theta = evaluate_model(X, y)\n",
+    "y_pred = predict(X, theta)\n",
+    "\n",
+    "# Calculate metrics\n",
+    "mse, r2 = calculate_metrics(y, y_pred)\n",
+    "\n",
+    "print(f\"MSE: {mse:.6f}\")\n",
+    "print(f\"R²: {r2:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f91535dc-4416-433e-8ebc-e25b7aa1fb7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
