Linear Regression for Indiviual Features

--- a/phase3.ipynb
+++ b/phase3.ipynb
@@ -269,9 +269,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4da295e-b8e0-4e5f-86d0-987f7b13961a",
+   "metadata": {},
+   "source": [
+    "### Linear Regression Attempt for Indiviual Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f91535dc-4416-433e-8ebc-e25b7aa1fb7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'manual_linear_regression' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[50], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# ============================================\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# MODEL 2: LINEAR REGRESSION - DURATION ONLY\u001b[39;00m\n\u001b[1;32m      4\u001b[0m X_duration \u001b[38;5;241m=\u001b[39m df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mduration\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m----> 5\u001b[0m theta_duration \u001b[38;5;241m=\u001b[39m manual_linear_regression(X_duration, y)\n\u001b[1;32m      6\u001b[0m y_pred_duration \u001b[38;5;241m=\u001b[39m predict(X_duration, theta_duration)\n\u001b[1;32m      7\u001b[0m mse_duration, r2_duration \u001b[38;5;241m=\u001b[39m calculate_metrics(y, y_pred_duration)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'manual_linear_regression' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# MODEL 2: LINEAR REGRESSION - DURATION ONLY\n",
+    "\n",
+    "X_duration = df[['duration']].values\n",
+    "theta_duration = manual_linear_regression(X_duration, y)\n",
+    "y_pred_duration = predict(X_duration, theta_duration)\n",
+    "mse_duration, r2_duration = calculate_metrics(y, y_pred_duration)\n",
+    "\n",
+    "print(\"\\nModel 2: Duration Only\")\n",
+    "print(f\"MSE: {mse_duration:.6f}\")\n",
+    "print(f\"R²: {r2_duration:.6f}\")\n",
+    "\n",
+    "# ============================================\n",
+    "# MODEL 3: LINEAR REGRESSION - VIEWS ONLY\n",
+    "# ============================================\n",
+    "\n",
+    "X_views = df[['views']].values\n",
+    "theta_views = manual_linear_regression(X_views, y)\n",
+    "y_pred_views = predict(X_views, theta_views)\n",
+    "mse_views, r2_views = calculate_metrics(y, y_pred_views)\n",
+    "\n",
+    "print(\"\\nModel 3: Views Only\")\n",
+    "print(f\"MSE: {mse_views:.6f}\")\n",
+    "print(f\"R²: {r2_views:.6f}\")\n",
+    "\n",
+    "# ============================================\n",
+    "# MODEL 4: LINEAR REGRESSION - LIKES ONLY\n",
+    "# ============================================\n",
+    "\n",
+    "X_likes = df[['likes']].values\n",
+    "theta_likes = manual_linear_regression(X_likes, y)\n",
+    "y_pred_likes = predict(X_likes, theta_likes)\n",
+    "mse_likes, r2_likes = calculate_metrics(y, y_pred_likes)\n",
+    "\n",
+    "print(\"\\nModel 4: Likes Only\")\n",
+    "print(f\"MSE: {mse_likes:.6f}\")\n",
+    "print(f\"R²: {r2_likes:.6f}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f91535dc-4416-433e-8ebc-e25b7aa1fb7a",
+   "id": "9904017a-38ac-4a7c-b59b-b9bb10417ffd",
    "metadata": {},
    "outputs": [],
    "source": []
