Outline remainder of part 3 progress

--- a/ProjectGuidelines.ipynb
+++ b/ProjectGuidelines.ipynb
@@ -172,7 +172,7 @@
    "source": [
     "## Third (Mandatory) TA Meeting\n",
     "\n",
-    "### When: Anytime before November 16\n",
+    "### When: Anytime before ~November 16~ now Dec. 5\n",
     "\n",
     "In your final meeting with the TA, your group must:\n",
     "\n",
