--- a/phase3_yunhan_merge_confligtsaaa.ipynb
+++ b/phase3_yunhan_merge_confligtsaaa.ipynb
@@ -226,6 +226,31 @@
     }
    ],
    "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: residuals graphs",
+   "id": "a5e0d8c2c81af99"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: measures of fit",
+   "id": "406646727fbd96bb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "TODO: ethical coniderations, conclusion etc\n",
+    "\n"
+   ],
+   "id": "dfc139f96184d0e7"
   }
  ],
  "metadata": {
