Add code to phase3.ipynb notebook

--- a/phase3.ipynb
+++ b/phase3.ipynb
@@ -235,7 +235,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: residuals graphs"
+    "plt.scatter(y_pred, residuals, alpha=0.6)\n",
+    "plt.axhline(0, color='red', linestyle='--')\n",
+    "\n",
+    "plt.xlabel(\"Predicted Engagement Rate\")\n",
+    "plt.ylabel(\"Residuals\")\n",
+    "plt.title(\"Residuals vs Predicted Values\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -312,32 +319,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: measures of fit"
+    "# Compute predictions\n",
+    "y_pred = m[1] * duration + m[0]\n",
+    "\n",
+    "# Compute residuals\n",
+    "residuals = y - y_pred\n",
+    "\n",
+    "# Measures of fit\n",
+    "mse = np.mean(residuals ** 2)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = np.mean(np.abs(residuals))\n",
+    "\n",
+    "print(\"RMSE:\", rmse)\n",
+    "print(\"MAE:\", mae)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dfc139f96184d0e7",
+   "id": "6f0d4eae-61b8-48b0-962a-d2d4f2556f4c",
    "metadata": {},
    "source": [
-    "TODO: ethical coniderations, conclusion etc\n",
-    "\n"
+    "The Engagement Rate vs. Duration scatterplot shows a positive linear relationship, meaning as duration increases, engagement rate also tends to increase. This implies that longer videos have a higher engagement rate. There is some variability in the plot, indicating that duration does not fully explain engagement rate. The Residuals vs. Order plot appears randomly scattered with no visible patterns or systematic trends. This supports the assumption of independence of errors, meaning each error is a separate and independent value that cannot predict any other error in the set. The Residuals vs. Fitted Values plot is roughly uniform across the entire range with no funnel shape or curvature. A few mild outliers appear on the graph, but the plot still overall supports the homoscedasticity assumption. On the Q-Q plot, most points fall close to the red theoretical line, meaning they are approximately normally distributed despite some deviations at the tail ends. The histogram of residuals appears roughly symmetric with a peak around zero, further supporting normality assumptions. Finally, on the Residuals vs. Predicted Values chart, the points appear randomly scattered about zero with no curved or U-shaped patterns. This suggests that the relationship between duration and engagement is reasonably linear and that the linear regression model is not missing any non-linear patterns."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3b3590e-c866-4956-b1e4-8678d6b21bea",
+   "cell_type": "markdown",
+   "id": "0b3307f4-4619-4640-98c5-824fe2d8247a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The RMSE (Root Mean Squared Error) value of .00617 indicates that, on average, the model is off by around 0.6 percentage points of engagement rate. This is a reasonable level of error, especially since most engagement rates fall around 1 to 4%. The MAE (Mean Average Error) value of .00436 indicates that predictions miss by about .4 percentage poitns of engagement on average. Both values are relatively small, meaning that the model has decent predictive accuracy, although it is not perfect."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de32a0ab-5754-46ad-bfb1-cf4d42c58a94",
+   "metadata": {},
+   "source": [
+    "Overall, there are not many notable ethical concerns with this dataset. Because it uses aggregate, publicly available video statistics instead of personal user data, ethical risks concerning privacy are very low. Where most ethical risks lie are with the term \"engagement rate\" itself. For one, the videos used are pulled from a specific niche of software engineering, machine learning, and AI based videos. Thus, results from this project may not generalize to all genres of YouTube videos and reinforce assumptions about what performs best from this specific niche. Engagement rate also does not neccesarily reflect content quality or value, so placing too much weight on this as a predictor could push creators to clickbait or overly algorithm-driven videos that prioritize numbers over content or audience well-being. These risks, however, are largely minimized by the fact that this project is not neccesarily intended for distribution to YouTube creators, making those risks low and far more manageable. "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -349,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
