--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -461,7 +461,9 @@
     "## Part 3: Exploratory Analysis and Plotting\n",
     "(2%) Produces plots that are clearly labeled, visually appealing, and informative in answering the project’s key questions.\n",
     "\n",
-    "In this section, we explore the relationships between **video duration** and **engagement rate** (defined as likes + comments per view) and **views** and **engagement rate**.\n"
+    "In this section, we explore the relationships between **video duration** and **engagement rate** (defined as likes + comments per view) and **views** and **engagement rate**.\n",
+    "\n",
+    "# Model 1"
    ],
    "id": "ed5ac61a531d8caa"
   },
@@ -526,6 +528,12 @@
    "execution_count": 8
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Model 1 analysis",
+   "id": "2d23df270aaf8f83"
+  },
+  {
    "cell_type": "code",
    "id": "86fb39c8-0b4e-4627-b377-2a59b36eda27",
    "metadata": {
@@ -565,6 +573,23 @@
     }
    ],
    "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Model 2\n",
+   "id": "7393cfe9200ba0eb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n"
+   ],
+   "id": "bb3d3370db8a95d3"
   },
   {
    "cell_type": "markdown",
