Add model 2 analysis

--- a/phase3.ipynb
+++ b/phase3.ipynb
@@ -593,7 +593,13 @@
    "cell_type": "markdown",
    "id": "50f5190ba04f9427",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Model 2 Analysis\n",
+    "\n",
+    "The polynomial regression suggests a positive, concave down relationship between duration and engagement rate, meaning that there are diminishing returns for a longer video. This is in line with our expectations as it would be unrealistic for videos to be continually rewarded for more duration. The R² value of 50.67% indicates that model does a good job of explaining the data.\n",
+    "\n",
+    "The graph of residuals vs order is fairly evenly distributed and centered along the middle line, meaning that there is likely no correlation between outliers/errors. The graph of residuals vs fitted values has a slight funnel shape, suggesting that the variance is not constant and is lower for lower durations. The points on the Q-Q plot fall close to the red theoretical line, suggesting that they are mostly normally distributed. This is mirrored on the residuals histogram as the data mostly follows a normal distribution, with a few outliers."
+   ]
   }
  ],
  "metadata": {
